--- a/src/App.css
+++ b/src/App.css
@@ -8,12 +8,37 @@
   background-color: white;
 }
 
+.header-section {
+  margin-top: 25px;
+  width: 950px;
+}
+
+.container {
+  width: 80%;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 
 .login-btn {
+  margin: 2vh auto;
   width: 100%;
   max-width: 250px;
   border-radius: 10px;
   font-size: 20px;
   background-color: #1DB954;
+  color: white;
   cursor: pointer;
+  text-decoration: none;
+  padding: 2vh 3vh;
+  display: block;
+  text-align: center;
+}
+
+#login {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
