--- a/src/App.css
+++ b/src/App.css
@@ -21,15 +21,14 @@
   justify-content: center;
 }
 
-
 .login-btn {
   margin: 2vh auto;
   width: 100%;
   max-width: 250px;
   border-radius: 10px;
   font-size: 20px;
-  background-color: #1DB954;
-  color: white;
+  background-color: #1db954;
+  color: black;
   cursor: pointer;
   text-decoration: none;
   padding: 2vh 3vh;
